# gold-star

./: Cargo.toml
src/: error.rs  lib.rs  manager.rs
src/commands/: give_star.rs  mod.rs  stars.rs
